--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,186 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.RenderProps__container{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  width: 100%;
+  height: 100%;
+  border-top: 3px solid #575757;
+  border-bottom: 3px solid #575757;
+}
+
+.Header{
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem 0;
+}
+
+.Header__title{
+  font-size: 2em;
+  font-weight: bold;
+  color: #1d1d1f;
+  text-align: center;
+  font-size: 1.3rem;
+  margin: .5rem 0;
+}
+
+.Banner__container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f5f5f5;
+  text-align: center;
+}
+
+.Banner__image{
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.Banner__title{
+  font-size: 2rem;
+  color: #1d1d1f;
+  text-align: center;
+  margin: .5rem 0;
+}
+
+.Banner__description {
+  font-size: 1.2rem;
+  color: #1d1d1f;
+  text-align: center;
+  margin: 1rem 0 2rem 0;
+}
+
+.Banner__button{
+  background-color: #0071e3;
+  padding: 1rem;
+  font-size: 1.2rem;
   color: white;
+  font-weight: bold;
+  border: none;
+  margin-top: 1rem;
+  width: 92px;
+  border-radius: 40px;
+  cursor: pointer;
+  transition: all .2s ease-in-out;
 }
 
-.App-link {
-  color: #61dafb;
+.Banner__button:hover{
+  background-color: #0060d7;
+  width: 94px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Main{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem 0;
+  background-color: white;
+}
+
+.Main__title{
+  font-size: 2rem;
+  color: #1d1d1f;
+  text-align: center;
+  margin: .5rem 0;
+}
+
+.Main__description{
+  font-size: 1.2rem;
+  color: #1d1d1f;
+  text-align: center;
+  margin: 1rem 0 2rem 0;
+}
+
+.Todo{
+  width: 400px;
+  margin: 1rem auto;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: white;
+  border-radius: .5rem;
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+}
+
+.Todo__title{
+  font-size: 1.5rem;
+  color: #0060d7;
+  text-align: center;
+  margin: 0 0 1rem 0;
+}
+
+.Todo__input{
+  width: 96%;
+  padding: .5rem;
+  border: none;
+  border-radius: .5rem;
+  font-size: 1rem;
+  color: #1d1d1f;
+  background-color: #fbfafa;
+  margin-bottom: 1rem;
+}
+
+.Todo__button{
+  text-align: center;
+  background-color: #0071e3;
+  width: 90px;
+  padding: .5rem;
+  font-size: 1rem;
+  margin: 0 auto;
+  color: white;
+  font-weight: bold;
+  border: none;
+  border-radius: .5rem;
+  cursor: pointer;
+  transition: all .2s ease-in-out;
+}
+
+.Todo__button:hover{
+  background-color: #0060d7;
+  width: 94px;
+}
+
+.HOC{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem 0;
+  background-color: white;
+}
+
+.DogsGrid{
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 10px;
+  background-color: white;
+}
+
+.DogsGrid__item{
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 5px;
+  font-size: 30px;
+  text-align: center;
+}
+
+.DogsGrid__item img {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+  grid-row: 1 / -1;
+  grid-column: 1;
+  border: 2px solid antiquewhite;
+  border-radius: 8px;
 }
